--- a/public/templates/game-list.html
+++ b/public/templates/game-list.html
@@ -1,5 +1,5 @@
 <div>
-    <div><a router-link="gd">gd</a></div>
+    <div><a router-link="gamedetail">Game Detail</a></div>
     <game-item
         *ng-for="#game of games"
         [name]="game.name"
