--- a/public/templates/game-store.html
+++ b/public/templates/game-store.html
@@ -1,3 +1,13 @@
+<style>
+    a{
+        font-size: 25px;
+    }
+</style>
+
+<nav>
+    <a router-link="home">Home</a>
+    <a router-link="cart">Cart</a>
+</nav>
  <main>
- <router-outlet></router-outlet>
+     <router-outlet></router-outlet>
  </main>
