--- a/public/templates/game-list.html
+++ b/public/templates/game-list.html
@@ -5,6 +5,8 @@
         [thumbnail]="game.thumbnail"
         [price]="game.price"
         [id]="game.id"
+
+        (click)="onGameClick(game)"
         >
     </game-item>
 </div>
