after one walkthrough

--- a/public/templates/game-item.html
+++ b/public/templates/game-item.html
@@ -11,9 +11,9 @@
     }
 </style>
 
-<div class="gameitem" [style.background-color]="getColor()">
-    <img [src]="thumbnail" alt="">
-    <h3>{{name}}</h3>
-    ${{price}}
 
+<div class="gameitem" [style.background-color]="color()">
+    <img [src]="thumbnail" alt="">
+    <h2>{{name}}</h2>
+    ${{price}}
 </div>
