--- a/public/templates/game-store.html
+++ b/public/templates/game-store.html
@@ -1,13 +1,13 @@
 <style>
-    [router-link]{
+    nav{
         font-size: x-large;
     }
 </style>
 
 <nav>
-    <a router-link="home">Home</a>
-    <a router-link="cart">Cart</a>
+    <a router-link="home">HOME</a>
+    <a router-link="cart">CART</a>
 </nav>
- <main>
-     <router-outlet></router-outlet>
- </main>
+<main>
+    <router-outlet></router-outlet>
+</main>
