Prices are now formatted to two decimals.

--- a/public/templates/game-cart.html
+++ b/public/templates/game-cart.html
@@ -2,4 +2,4 @@
 <div *ng-for="#game of cartService.games">
     Price: {{game.price}} Game: {{game.name}}
 </div>
-<h2>Your total: {{cartService.total()}}</h2>
+<h2>Your total: {{cartService.total().toFixed(2)}}</h2>
