--- a/public/templates/game-item.html
+++ b/public/templates/game-item.html
@@ -15,5 +15,5 @@
 <div class="gameitem" [style.background-color]="color()">
     <img [src]="thumbnail" alt="">
     <h2>{{name}}</h2>
-    ${{price}}
+    ${{price.toFixed(2)}}
 </div>
